# mermaid-ui

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SCRATCH.MD  SCRATCH.md
cmake/: FindCairo.cmake
mermaid-gui/include/mermaid/: Application.h  Context.h  Core.h  Event.h  EventDispatcher.h  Font.h  ResourceManager.h  SdlContext.h  SdlRenderer.h  SdlWindow.h
mermaid-gui/include/mermaid/components/: Button.h  Component.h  Cursor.h  HBox.h  Label.h  TextInput.h  VBox.h  View.h  Widget.h
mermaid-gui/include/mermaid/graphics/: DrawContext.hpp  SDL2DrawContext.hpp  functions.hpp
mermaid-gui/include/mermaid/helpers/: string_helper.h
mermaid-gui/src/: Application.cpp  Event.cpp  EventDispatcher.cpp  Font.cpp  ResourceManager.cpp  SdlContext.cpp  SdlRenderer.cpp  SdlWindow.cpp
mermaid-gui/src/components/: Button.cpp  HBox.cpp  Label.cpp  VBox.cpp  View.cpp  Widget.cpp
mermaid-gui/src/helpers/: string_helper.cpp
mermaid-gui/src/mermaid/: Application.cpp  Event.cpp  EventDispatcher.cpp  Font.cpp  SdlContext.cpp  SdlRenderer.cpp  SdlWindow.cpp
mermaid-gui/src/mermaid/components/: Button.cpp  Cursor.cpp  HBox.cpp  Label.cpp  TextInput.cpp  VBox.cpp  View.cpp  Widget.cpp
mermaid-gui/src/mermaid/graphics/: SDL2DrawContext.cpp  functions.cpp
mermaid-parser/: CMakeLists.txt
mermaid-parser/include/mermaid/parser/: Attribute.h  CodeGenerator.h  Error.h  Lexer.h  Location.h  Parser.h  Tag.h  Variable.h
mermaid-parser/include/parser/: Lexer.h
mermaid-parser/src/: main.cpp
mermaid-parser/src/mermaid/parser/: Attribute.cpp  CodeGenerator.cpp  Error.cpp  Lexer.cpp  Location.cpp  Parser.cpp  Variable.cpp
mermaid-parser/tests/: CMakeLists.txt
mermaid-parser/tests/src/: LexerTest.cpp
resources/: CMakeLists.txt
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: ApplicationTest.cpp  EventDispatcherTest.cpp  RectTest.cpp  WidgetTest.cpp
